--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,23 @@
 .wrapper {
     @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8
 }
+
+.input-style {
+    @apply w-full p-3 pl-1 text-sm  bg-transparent text-gray-900  focus:outline-none
+}
+
+.input-field {
+    @apply w-full flex  items-center border-b border-gray-400 
+}
+
+.textarea {
+    @apply w-full p-1  bg-transparent text-sm text-gray-900 h-32 focus:outline-none
+}
+
+.textarea-field {
+    @apply flex border-b border-gray-400 
+}
+
+.location {
+    @apply block text-xs
+}
