--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,11 @@
 .location {
     @apply block text-xs
 }
+
+.publication-grid {
+    @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 place-items-center gap-6
+}
+
+.publication-heads {
+    @apply text-xl md:text-2xl font-bold mb-6 text-gray-800
+}
